[package]
name = "tilelib"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.21.0", features = ["derive"] }
image = { version = "0.25.5", features = ["png"] }
itertools = "0.14.0"
log = "0.4.25"
pollster = "0.4.0"
spin_sleep_util = "0.1.1"
wgpu = "23.0.1"
winit = "0.30.8"

[lints.clippy]
pedantic = "deny"
